[build-system]
requires = ["setuptools>=61.0", "pyperclip"]
build-backend = "setuptools.build_meta"

[project]
name = "ojtest"
version = "0.0.3.7"
authors = [
  { name="Vela", email="velayf@outlook.com" },
]
description = "A testcase generator for online judges."
readme = "README.md"
requires-python = ">=3.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/VelaQ/oj_testcase"
"Bug Tracker" = "https://github.com/VelaQ/oj_testcase/issues"